--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ set(This TestsToRun)
 
 # Add unit test .cpp files which are in directory test
 set(Sources
-    Tests.cpp
+    CalculatorTests.cpp
 )
 
 add_executable(${This} ${Sources})
