--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,8 @@
 			"extensions": [
 				"vadimcn.vscode-lldb",
 				"ms-vscode.cpptools-extension-pack",
-				"mathematic.vscode-pdf"
+				"mathematic.vscode-pdf",
+				"matepek.vscode-catch2-test-adapter"
 			]
 		}
 	}
